2015-09-26  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #18985]
	* time/strftime_l.c (a_wkday, f_wkday, a_month, f_month): Range check.
	(__strftime_internal): Likewise.
	* time/tst-strftime.c (do_bz18985): New test.
	(do_test): Call it.

2015-08-08  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #17905]
	* catgets/Makefile (tst-catgets-mem): New test.
	* catgets/catgets.c (catopen): Don't use unbounded alloca.
	* catgets/open_catalog.c (__open_catalog): Likewise.
	* catgets/tst-catgets.c (do_bz17905): Test unbounded alloca.

2015-04-29  Florian Weimer  <fweimer@redhat.com>

	[BZ #18007]
	* nss/nss_files/files-XXX.c (CONCAT): Always enable stayopen.
	(CVE-2014-8121)
	* nss/tst-nss-getpwent.c: New file.
	* nss/Makefile (tests): Add new test.

2015-04-21  Arjun Shankar  <arjun.is@lostca.se>

	[BZ #18287]
	* resolv/nss_dns/dns-host.c (getanswer_r): Adjust buffer length
	based on padding.  (CVE-2015-1781)

2015-07-21  Mike Frysinger  <vapier@gentoo.org>

	[BZ #18694]
	* sysdeps/unix/sysv/linux/sparc/bits/sigaction.h: Include
	bits/wordsize.h.
	(sigaction): Declare __glibc_reserved0 only when __WORDSIZE is 64.

2015-02-16  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #16618]
	* stdio-common/tst-sscanf.c (main): Test for buffer overflow.
	* stdio-common/vfscanf.c (_IO_vfscanf_internal): Compute needed
	size in bytes. Store needed elements in wpmax. Use needed size
	in bytes for extend_alloca.

2015-02-16  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17801]
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Set the bit_AVX_Fast_Unaligned_Load bit for AVX2.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_AVX_Fast_Unaligned_Load):
	New.
	(index_AVX_Fast_Unaligned_Load): Likewise.
	(HAS_AVX_FAST_UNALIGNED_LOAD): Likewise.
	* sysdeps/x86_64/multiarch/memcpy.S (__new_memcpy): Check the
	bit_AVX_Fast_Unaligned_Load bit instead of the bit_AVX_Usable bit.
	* sysdeps/x86_64/multiarch/memcpy_chk.S (__memcpy_chk): Likewise.